# vime

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yml  environment.yml  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
multirun/: multirun.yaml
multirun/data.n_labeled=0.1,data.n_workers=0,model=linear/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=0.1,data.n_workers=0,model=xgboost/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=0.2,data.n_workers=0,model=linear/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=0.2,data.n_workers=0,model=xgboost/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=100,data.n_workers=0,model=linear/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=100,data.n_workers=0,model=xgboost/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=100,data.n_workers=0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=100,data.n_workers=0/checkpoints/: best_k_models.yaml  epoch=62-step=63.ckpt
multirun/data.n_labeled=100,data.n_workers=0/wandb/: latest-run
multirun/data.n_labeled=1000,data.n_workers=0,model=linear/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/data.n_labeled=1000,data.n_workers=0,model=xgboost/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/: baselines.txt  blog-baselines.txt  mnist-baselines.txt
vime/: __init__.py  _constants.py  data.py  encoder.py  train.py  train_baseline.py  train_self.py  train_semi.py  utils.py
vime/conf/: config.yaml
vime/models/: encoder.py  mlp.py  modules.py  semi.py
(+85 files in other folders)
